# simple-chat

./: README.md
client/: cloudfront-template.yaml  package-lock.json  package.json  packaged-cloudfront-template-dev.yaml  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx
client/src/components/ui/: chat-bubble.tsx  theme-toggle.tsx
client/src/hooks/: theme-context.tsx
client/src/lib/: api.ts
eval/: .env.example  README.md  evaluate_intelligence1.ipynb  evaluate_intelligence2.ipynb  requirements.txt
server/: .gitignore  README.md  app.py  constants.py  database.py  exceptions.py  manage.py  package-lock.json  package.json  pyproject.toml  serverless.yml
server/api/v1/: chat.py
server/config/: __init__.py  default.py  development.py  local.py  production.py  test.py
server/models/: __init__.py
server/models/tests/: test_foo_models.py
server/scripts/: generate_serverless_config.py
server/utils/: logger.py  s3.py  test_utils.py  utils.py
server/utils/types/: doc_fields.py
