[tool.poetry]
name = "chai-chat-demo-server"  
version = "0.0.0"
description = "Chai Chat Demo Server"
authors = ["Daniel Newman <me@dtnewman.com>"]
license = ""
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.0"
black = "^24.10.0"
boto3 = "^1.34.48"
fastapi = "^0.110.0"
mangum = "^0.17.0"
pytest = "^7.3.1"
pytest-env = "^0.8.1"
pytest-cov = "^4.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.36"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
cryptography = "^44.0.0"
pydantic-settings = "^2.6.1"
httpx = "^0.28.1"

[tool.pyright]
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
env = [
    "env=Test"
]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
omit = ["config/*"]